# control

./: .gitignore  .travis.yml  README.md
CarND-PID-Control-Project/: CMakeLists.txt  README.md  pid_visualization.ipynb
CarND-PID-Control-Project/src/: main.cpp  pid.cpp  pid.h  utilities.h
MPC-Controller/: CMakeLists.txt  README.md  downloadUWsSockets.cmake.in  install_ipopt.sh
MPC-Controller/include/: mpc.h  utilities.h
MPC-Controller/src/: main.cpp  mpc.cpp  mpc.h  utilities.h
PID-Controller/: CMakeLists.txt  README.md  downloadUWsSockets.cmake.in
PID-Controller/include/: pid.h  utilities.h
PID-Controller/src/: main.cpp  pid.cpp  utilities.h
PidController/: CMakeLists.txt
PidController/src/: main.cpp  pid.h
ToyController/: README.md  pid_controller.py
